# auction-site-networking

./: Client.cpp  ClientProgram.cpp  Middleware.cpp  Server.cpp  ServerProgram.cpp  ServerProgram.h  TCPBaseClient  TCPBaseClient.cpp  TCPBaseServer  TCPBaseServer.cpp  a.out
client/: ClientProgram.cpp  ClientProgram.h
m/: CMakeLists.txt  Dockerfile  main.cpp
m/middleware/: MiddlewareProgram.cpp
middleware/: MiddlewareProgram.cpp  MiddlewareProgram.h
server/: ServerProgram.cpp  ServerProgram.h
